# TokAN-RealTime

./: .gitignore  .gitmodules  .project-root  LICENSE  README.md  inference.py  pyproject.toml  requirements.txt  run.sh
components/text_to_mel/: prepare_data.sh  train.py
components/text_to_mel/configs/: train.yaml
components/text_to_mel/local/: collect_libritts.py  extract_speaker_embedding.py
components/token_to_mel/: prepare_data.sh
components/token_to_mel/configs/: train.yaml
components/token_to_mel/local/: collect_libritts.py  extract_hubert_tokens.py  extract_speaker_embedding.py  parse_options.sh
components/token_to_token/: prepare_finetuning_data.sh  prepare_pretraining_data.sh
components/token_to_token/local/: collect_libritts.py  extract_accent_embedding.py  extract_hubert_tokens.py  (+1 more)
scripts/: parse_options.sh  verify_data_preparation.py
scripts/evaluation/: compute_ppg_distance.py  compute_speaker_similarity.py  compute_wer.py
scripts/generation/: fairseq_decode.py  generate_from_fairseq_manifest.py  generate_l2arctic_target.py
tokan/: README.md
tokan/bigvgan/: bigvgan.py  meldataset.py
tokan/data/: l2arctic.py
tokan/fairseq_modules/: __init__.py
tokan/textless/: hubert_feature_reader.py  speech_encoder.py
tokan/utils/: __init__.py  data.py  instantiators.py  logging_utils.py  model_utils.py  phoneme_tokenizer.py  pylogger.py  rich_utils.py  train.py  utils.py
tokan_gan_decoder/: components.py  config.yaml  tokan_evaluation.py  tokan_profiler.py
tokan_gan_decoder/fast_synthesizer/: prepare_gan_splits.py
(+10078 files in other folders)
